--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ File Name: Hair-->
 	<!-- Nav goes Here-->
 	<nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-info jumbotron-fluid ">
 	
-		<a class="navbar-brand logo ml-2" href="index.html"><img src="images/SnipCraftnav.png"  alt="SnipCraft"  ></a>
+		<a class="navbar-brand logo ml-2" href="index.html"><img src="images/snipcraftnav.png"  alt="SnipCraft"  ></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
