--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ File Name: Hair-->
 	<!-- Nav goes Here-->
 	<nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-info jumbotron-fluid ">
 	
-		<a class="navbar-brand logo ml-2" href="index.html"><img src="images/snipcraftnav.png"  alt="SnipCraft"  ></a>
+		<a class="navbar-brand logo ml-2" href="index.html"><img src="images/SnipCraftnav.png"  alt="SnipCraft"  ></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -56,7 +56,7 @@ File Name: Hair-->
 	<!--Header -->
 	<header class="jumbotron jumbotron-fluid bg-info  text-center style mt-5 ">
 		<div class="container">
-			<h1 id="nutr" class="display-1">Welcome to SnipCraft</h1>
+			<h1 id="nutr" class="display-2 pt-4">Welcome to SnipCraft</h1>
 			<p class="lead">Where you can get your hair cut</p>
         </div>
 	</header> 
@@ -66,21 +66,20 @@ File Name: Hair-->
 	
 	<!-- Main Content -->
 	
-	<main class="container col container-fluid mt-5 text-center bg-light pt-3 style ">
+	<main class="container col container-fluid mt-5 text-center bg-light pt-3  ">
 	
-		<div>
+		<div class="row">
 		
-			<div>
+			<div class="col-sm-4">
 				<figure class="frame">
 					<a href="my_works.html"><img src="images/haircut_after.jpg" alt="Guy haircut" ></a>
 				</figure>
-				<h1 class="color">works</h1>
+				<h1 class="color" >Works</h1>
 				<p class="lead">Check out the haircuts that we did</p>
 			</div>
-		</div>
-		<div class="row">
+
 		
-			<div class="col-sm-6 ">
+			<div class="col-sm-4 ">
 				<figure class="frame">
 					<a href="products.html"><img src="images/product1.jpg" alt="Products stuff" ></a>
 				</figure>
@@ -88,7 +87,7 @@ File Name: Hair-->
 				<p class="lead">Look at the products we have</p>
 			</div>
 			
-			<div class="col-sm-6">
+			<div class="col-sm-4">
 				<figure class="frame">
 					<a href="services.html"><img src="images/razor.jpg" alt="The Services we provide"></a>
 				</figure>
