--- a/services.html
+++ b/services.html
@@ -13,14 +13,17 @@ File Name: Hair
 	
 		<!-- My Style Sheet -->
 	<link rel="stylesheet" href="css/styles.css">
+	
+	<!--Favicon-->
+	<link rel="shortcut icon" href="images/snipcraft.png">
 
-    <title>snipcraft</title>
+    <title>Snipcraft</title>
   </head>
   <body>
 	<!-- Nav goes Here-->
 	<nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-info jumbotron-fluid ">
 	
-		<a class="navbar-brand logo ml-2" href="index.html"><img src="images/SnipCraftnav.png"  alt="SnipCraft"  ></a>
+		<a class="navbar-brand logo ml-2" href="index.html"><img src="images/snipcraftnav.png"  alt="SnipCraft"  ></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -52,7 +55,7 @@ File Name: Hair
 	
 	<header class="jumbotron jumbotron-fluid text-center mt-5 ">
 		<div class="container style">
-			<h1 id="nutr" class="display-1 ">Services</h1>
+			<h1 id="nutr" class="display-2 pt-4">Services</h1>
 			<p class="lead">The services we offer</p>
         </div>
 	</header> 
@@ -60,11 +63,12 @@ File Name: Hair
 	<main>
 		<div class="container container-fluid bg-light">
 			<h2> Our services</h2>
-			<p>Here at SnipCraft we provibe a range of services, all are listed her down below. If you have any questions please ask them here:</p>
+			<p>Here at SnipCraft we provide a range of services, all are listed her down below. If you have any questions please ask them here:</p>
 			<a href="contact.html" role="button" class="btn btn-outline-secondary btn-lg bg-info color"> Contacts  </a>
 		</div>
+	
 		<div class="container pt-2 mt-4 bg-light text-center">
-			<h1 class="style mb-3"> Prices</h1>
+			<h1 class= "mb-3"> Prices</h1>
 			<div class="col bg-info">
 				<h3 class="color">Haircut & Styles</h3>
 				<p>Adults: $35</p>
@@ -87,7 +91,7 @@ File Name: Hair
 				<p>Roots: $80</p>
 					
 			</div>	
-		<div>
+		</div>
 	</main>
 	
 
