--- a/products.html
+++ b/products.html
@@ -9,7 +9,7 @@ File Name: Hair-->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
 	<!--Favicon-->
-	<link rel="shortcut icon" href="images/SnipCraft.png">
+	<link rel="shortcut icon" href="images/snipcraft.png">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -24,7 +24,7 @@ File Name: Hair-->
 	<!-- Nav goes Here-->
 	<nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-info jumbotron-fluid ">
 	
-		<a class="navbar-brand logo ml-2" href="index.html"><img src="images/SnipCraftnav.png"  alt="SnipCraft"  ></a>
+		<a class="navbar-brand logo ml-2" href="index.html"><img src="images/snipcraftnav.png"  alt="SnipCraft"  ></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -40,10 +40,10 @@ File Name: Hair-->
 					<a class="nav-link" href="services.html">Services</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="products.html">products</a>
+					<a class="nav-link" href="products.html">Products</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="my_works.html">My works</a>
+					<a class="nav-link" href="my_works.html">Works</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="contact.html">Contact Us !</a>
@@ -55,8 +55,8 @@ File Name: Hair-->
 	<!--Header reason for black bar-->
 	
 	<header class="jumbotron jumbotron-fluid text-center mt-5 ">
-		<div class="container style">
-			<h1 id="nutr" class="display-1">Products</h1>
+		<div class="container style ">
+			<h1 id="nutr" class="display-2 pt-4">Products</h1>
 			<p class="lead">The products that we use.</p>
         </div>
 	</header> 
@@ -80,18 +80,25 @@ File Name: Hair-->
 				</figure>
 		
 			</div>
+
+
+		</div>
+		<div class="row text-center">
+		
 			<div class="col">
 				<figure class="frame">
 					<img src="images/product3.jpg" alt=" products "></a>
 				</figure>
 
 			</div>
+			
+			<div class="col">
+					<figure class="frame1">
+						<img src="images/product4.jpg" alt=" products "></a>
+					</figure>
+			</div>
+			
 
-		</div>
-		<div class="col">
-				<figure class="frame1">
-					<img src="images/product4.jpg" alt=" products "></a>
-				</figure>
 		</div>
 		
 	</main>
