--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@ File Name: Hair-->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
 	<!--Favicon-->
-	<link rel="shortcut icon" href="images/SnipCraft.png">
+	<link rel="shortcut icon" href="images/snipcraft.png">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -25,7 +25,7 @@ File Name: Hair-->
 	<!-- Nav goes Here-->
 	<nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-info jumbotron-fluid ">
 	
-		<a class="navbar-brand logo ml-2" href="index.html"><img src="images/SnipCraftnav.png"  alt="SnipCraft"  ></a>
+		<a class="navbar-brand logo ml-2" href="index.html"><img src="images/snipcraftnav.png"  alt="SnipCraft"  ></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
